# 2025_td3

./: 2_ega  3_trabajos_practicos  README.md
2_egb/: README.md
3_trabajos_practicos/: README.md
3_trabajos_practicos/freertos/: CMakeLists.txt
3_trabajos_practicos/tp1/: .gitignore  CMakeLists.txt  README.md  TP1.c  firmware.c
3_trabajos_practicos/tp1/.metadata/: .log4j.xml  version.ini
3_trabajos_practicos/tp1/Firmware/: CMakeLists.txt  Firmware.c
3_trabajos_practicos/tp1/TP1_Led/: TP1_Led.c
3_trabajos_practicos/tp2/: README.md
3_trabajos_practicos/tp2/freertos/: CMakeLists.txt
4_workspace/: README.md
4_workspace/Firmware/: CMakeLists.txt  Firmware.c
4_workspace/Workspace_Nahuel_Portas/: README.txt
4_workspace/freertos_blinky/: CMakeLists.txt  freertos_blinky.c
4_workspace/freertos_mutex/: CMakeLists.txt  README.md  freertos_mutex.c
4_workspace/freertos_queue_basic/: CMakeLists.txt  README.md  freertos_queue_basic.c
4_workspace/freertos_queue_irq/: CMakeLists.txt  README.md  freertos_queue_irq.c
4_workspace/freertos_queue_typedef/: CMakeLists.txt  README.md  freertos_queue_typedef.c
4_workspace/freertos_semphr/: CMakeLists.txt  README.md  freertos_semphr.c
4_workspace/freertos_semphr_counting_irq/: CMakeLists.txt  README.md  freertos_semphr_counting_irq.c
4_workspace/freertos_semphr_irq/: CMakeLists.txt  README.md  freertos_semphr_irq.c
4_workspace/freertos_task_handle/: CMakeLists.txt  README.md  freertos_task_handle.c
4_workspace/freertos_task_params/: CMakeLists.txt  README.md  freertos_task_params.c
5_docs/: README.md
(+100 files in other folders)
